2010-04-06  Kevin B. Kenny  <kennykb@acm.org>

	* doc/Tdbc_Init.3:
	* doc/tdbc.n:
	* doc/tdbc_connection.n:
	* doc/tdbc_mapSqlState.n:
	* doc/tdbc_resultset.n:
	* doc/tdbc_statement.n:
	* doc/tdbc_tokenize.n: Merged changes from the trunk of the 
	Tcl source tree that make the documentation fit better with the
	Tcl manuals. (Tickets [02c0131ba1] and [18c90402fb]).

	* Makefile.in: Corrected a misinstallation of the manual
	pages in the case where $(MANDIR)/man3 doesn't exist.
	(Ticket [99e97fb098])

	* generic/tdbc.c:
	* generic/tdbcDecls.h:
	* generic/tdbcStubInit.c:
	* generic/tdbcStubLib.c:
	* tools/genStubs.tcl: Made the Stubs tables (and a few other constants
	formally 'const'. (Ticket [cf7bc364cc])
	
2010-03-14  Kevin B. Kenny  <kennykb@acm.org>

	* tools/genExtStubs.tcl (new file): Added a tool so that
	drivers can resolve imports into Stubs tables at run time, allowing
	them to avoid compile-dependencies on the respective databases'
	build systems. 
	
2010-03-01  Kevin B. Kenny  <kennykb@acm.org>

	* tools/tdbc-man2html.tcl: Added SourceForge logo to the HTML
	documentation, to comply with requirements for hosting the
	documentation at SourceForge.

2009-09-20  Kevin B. Kenny  <kennykb@acm.org>

	* tools/tdbc-man2html.tcl: Added tdbcpostgres to the documentation set.
	* generic/tdbc.h:
	* configure.in:
	* README:		Advance version number to 1.0b13
	* configure:		autoconf-2.59
	
2009-07-02  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbc.h:
	* configure.in:
	* README:		Advance version number to 1.0b12
	* configure:		autoconf-2.59
	
	
2009-05-29  Kevin B. Kenny  <kennykb@acm.org>
	
	* generic/tdbc.h:
	* configure.in:
	* README:		Advance version number to 1.0b11
	* configure:		autoconf-2.59
	
2009-04-21  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in (dist): Rename Tdbc.3 to Tdbc_Init.3 to avoid
	a file naming conflict in HTML documentation.
	* doc/Tdbc_Init.3: Renamed from Tdbc.3. Added IGNORE arond macros
	* doc/tbdc.n:
	* doc/tdbc_connection.n: