@@ -1,4 +1,4 @@
-'\" tdbc_connection.n --
+'\" tdbc::connection.n --
 '\"
 '\" Copyright (c) 2008 by Kevin B. Kenny.
 '\"
@@ -103,10 +103,11 @@ command is deleted.
 The \fBprepare\fR object command on a database connection prepares a SQL
 statement for execution. The \fIsql-code\fR argument must contain a
 single SQL statement to be executed. Bound variables may be
-included. See \fBSQL STATEMENTS\fR for a further description of the
-SQL that is accepted by this command. The return value is a
+included. The return value is a
 newly-created Tcl command that represents the statement. See
-\fBtdbc_statement\fR for the interface accepted by a statement.
+\fBtdbc::statement\fR for more detailed discussion of the
+SQL accepted by the \fBprepare\fR object command and the
+interface accepted by a statement.
 .PP
 On a database connection where the underlying database and driver
 support stored procedures, the \fBpreparecall\fR
@@ -119,7 +120,7 @@ The syntax of the stored procedure call is:
 .PP
 The return value is a
 newly-created Tcl command that represents the statement. See
-\fBtdbc_statement\fR for the interface accepted by a statement.
+\fBtdbc::statement\fR for the interface accepted by a statement.
 .PP
 The \fBstatements\fR object command returns a list of statements 
 that have been created by \fBprepare\fR and \fBpreparecall\fR
@@ -195,19 +196,19 @@ rethrown. Any other return code is treated similarly to \fBbreak\fR,
 .PP
 The \fBallrows\fR object command prepares a SQL statement (given by
 the \fIsql-code\fR parameter) to execute against the database.
-It then executes it (see \fBtdbc_statement\fR for details) with the
+It then executes it (see \fBtdbc::statement\fR for details) with the
 optional \fIdictionary\fR parameter giving bind variables. Finally,
 it uses the \fIallrows\fR object command on the result set (see
-\fBtdbc_resultset\fR) to construct a list of the results. Finally, both
+\fBtdbc::resultset\fR) to construct a list of the results. Finally, both
 result set and statement are closed. The return value is the list of
 results. 
 .PP
 The \fBforeach\fR object command prepares a SQL statement (given by
 the \fIsql-code\fR parameter) to execute against the database.
-It then executes it (see \fBtdbc_statement\fR for details) with the
+It then executes it (see \fBtdbc::statement\fR for details) with the
 optional \fIdictionary\fR parameter giving bind variables. Finally,
 it uses the \fIforeach\fR object command on the result set (see
-\fBtdbc_resultset\fR) to evaluate the given \fIscript\fR for each row of
+\fBtdbc::resultset\fR) to evaluate the given \fIscript\fR for each row of
 the results. Finally, both result set and statement are closed, even
 if the given \fIscript\fR results in a \fBreturn\fR, an error, or
 an unusual return code. 
