@@ -4,11 +4,12 @@
 	* doc/tdbc.n:
 	* doc/tdbc_connection.n:
 	* doc/tdbc_mapSqlState.n:
+	* doc/tdbc_connection.n:
 	* doc/tdbc_resultset.n:
 	* doc/tdbc_statement.n:
 	* doc/tdbc_tokenize.n: Merged changes from the trunk of the 
 	Tcl source tree that make the documentation fit better with the
-	Tcl manuals. (Tickets [02c0131ba1] and [18c90402fb]).
+	Tcl manuals. (Tickets [fcc8231b9e], [02c0131ba1] and [18c90402fb]).
 
 	* Makefile.in: Corrected a misinstallation of the manual
 	pages in the case where $(MANDIR)/man3 doesn't exist.
